<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/theme_key"
        android:title="@string/theme"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/remember_user_key"
        android:summaryOff="@string/remember_user_on"
        android:summaryOn="@string/remember_user_off"
        android:title="@string/remember_user"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/use_dx_key"
        android:summaryOff="@string/use_dx_off"
        android:summaryOn="@string/use_dx_on"
        android:title="@string/use_dx"/>
    <Preference android:title="@string/licenses"/>
    <Preference android:title="@string/about"/>
</PreferenceScreen>