<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference
		android:id="@+id/faq"
		android:key="@string/faq"
		android:title="@string/faq"/>
	<Preference
		android:id="@+id/licenses"
		android:key="@string/licenses"
		android:title="@string/licenses"/>
	<PreferenceCategory android:title="@string/about">
		<Preference
			android:id="@+id/app_version"
			android:key="@string/app_name"
			android:title="@string/app_name"/>
		<Preference
			android:id="@+id/github_source"
			android:key="@string/github_source"
			android:summary="@string/github_url"
			android:title="@string/github_source"/>
		<Preference
			android:id="@+id/fallback"
			android:key="@string/fallback"
			android:summary="@string/github_issue"
			android:title="@string/fallback"/>
		<Preference
			android:id="@+id/check_update"
			android:key="@string/check_update"
			android:title="@string/check_update"/>
	</PreferenceCategory>
</PreferenceScreen>