<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/main_settings"
                android:icon="@drawable/ic_settings_grey_500_24dp"
                android:title="@string/settings"/>
            <item
                android:id="@+id/main_help"
                android:icon="@drawable/ic_help_grey_500_24dp"
                android:title="@string/help"/>
            <item
                android:id="@+id/main_logout"
                android:icon="@drawable/ic_exit_to_app_grey_500_24dp"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>