<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/add_schedule_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="16dp">

		<android.support.v7.widget.AppCompatSpinner
			android:id="@+id/add_schedule_year"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/get_schedule_time_xnd"/>


		<android.support.v7.widget.AppCompatSpinner
			android:id="@+id/add_schedule_term"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/get_schedule_time_xqd"/>
	</LinearLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/get_schedule_tips"
		android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
</LinearLayout>
