<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/information_manage"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?attr/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/main_get_information"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/get_information"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:theme="@style/AppTheme.Dark"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/main_change_password"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardBackgroundColor="@color/indigo_500"
                app:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/change_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:theme="@style/AppTheme.Dark"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:paddingLeft="16dp"
            android:text="@string/information_query"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?attr/colorAccent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/main_get_grade"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardBackgroundColor="@color/blue_500"
                app:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/get_grade"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/main_get_exam_time"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardBackgroundColor="@color/teal_500"
                app:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/get_exam_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/main_get_schedule"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardBackgroundColor="@color/green_500"
                app:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/get_schedule"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/main_get_level_exam_grade"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClick"
                app:cardBackgroundColor="@color/yellow_700"
                app:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/get_level_exam_grade"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>