<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_50"
              android:orientation="vertical">

    <include
        layout="@layout/widget_exam_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/get_exam_time_widget_preview"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/get_exam_time_widget_spinner_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:theme="@style/Theme.AppCompat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/get_exam_time_xnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/get_exam_time_widget_spinner_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:theme="@style/Theme.AppCompat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/get_exam_time_xqd"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"/>
    </LinearLayout>
</LinearLayout>