<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_50">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<include layout="@layout/toolbar"/>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginTop="32dp">

			<EditText
				android:id="@+id/change_psw_old"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/change_psw_old"
				android:inputType="textPassword"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			app:errorEnabled="true">

			<EditText
				android:id="@+id/change_psw_new"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/change_psw_new"
				android:inputType="textPassword"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp">

			<EditText
				android:id="@+id/change_psw_ensure"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/change_psw_ensure"
				android:inputType="textPassword"/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:id="@+id/change_psw_safe_rate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:gravity="center"
			android:textColor="@color/teal_500"/>

		<Button
			android:id="@+id/change_psw_commit"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@android:string/ok"/>

		<TextView
			android:id="@+id/change_psw_tips"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
	</LinearLayout>
</ScrollView>